--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -17,7 +17,7 @@
             }
         </script>
     </head>
-    <body>
+    <body class="bg-body-tertiary">
         <div id="loading-modal"
              class="visually-hidden position-fixed d-flex justify-content-center align-items-center h-100 w-100 bg-secondary bg-opacity-50"
              style="z-index: 5000000">
