--- a/src/main/resources/views/add-task.html
+++ b/src/main/resources/views/add-task.html
@@ -5,11 +5,13 @@
 )}" xmlns:th="http://www.thymeleaf.org">
   <body>
     <section>
-      <h1>Add Task</h1>
-      <form action="#" th:action="@{/tasks/add}" method="post" onsubmit="disableSubmitButtons()">
-        <div th:replace="~{fragments/task-fields :: task-fields(${taskRequest})}"></div>
-        <input th:replace="~{fragments/disabling-submit :: disabling-submit('Add task')}" />
-      </form>
+      <div class="container">
+        <h1>Add Task</h1>
+        <form action="#" th:action="@{/tasks/add}" method="post" onsubmit="disableSubmitButtons()">
+          <div th:replace="~{fragments/task-fields :: task-fields(${taskRequest})}"></div>
+          <input th:replace="~{fragments/disabling-submit :: disabling-submit('Create')}" />
+        </form>
+      </div>
     </section>
   </body>
 </html>
