--- a/src/main/resources/views/fragments/task-fields.html
+++ b/src/main/resources/views/fragments/task-fields.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    <div th:fragment="task-fields(taskRequest)">
-      <div>
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" th:value="${taskRequest.name}" />
+    <div th:fragment="task-fields(taskRequest)" class="pb-2">
+
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" name="name" id="name" th:value="${taskRequest.name}" class="form-control"/>
         <div th:replace="~{fragments/field-errors :: field-errors('name', ${errors})}"></div>
       </div>
-      <div>
-        <label for="dueDate">Due date</label>
-        <input type="text" name="dueDate" id="dueDate" th:value="${taskRequest.dueDate}" />
+
+      <div class="mb-3">
+        <label for="dueDate" class="form-label">Due date</label>
+        <input type="text" name="dueDate" id="dueDate" th:value="${taskRequest.dueDate}" class="form-control"/>
+        <div class="form-text">Note: Requires YYYY-MM-DD format, e.g 2023-12-25</div>
         <div th:replace="~{fragments/field-errors :: field-errors('dueDate', ${errors})}"></div>
       </div>
-      <div>
-        <label for="triggerType">Trigger Type</label>
-        <select name="triggerType" id="triggerType" onchange="onTriggerTypeChange(this)">
-          <option value="FIXED_DELAY" th:selected="${taskRequest.triggerType} == 'FIXED_DELAY'">Fixed delay</option>
-          <option value="WEEKLY" th:selected="${taskRequest.triggerType} == 'WEEKLY'">Weekly</option>
-          <option value="MONTHLY" th:selected="${taskRequest.triggerType} == 'MONTHLY'">Monthly</option>
-          <option value="YEARLY" th:selected="${taskRequest.triggerType} == 'YEARLY'">Yearly</option>
-          <option value="ONE_OFF" th:selected="${taskRequest.triggerType} == 'ONE_OFF'">One off</option>
-        </select>
+
+      <div class="mb-3">
+        <label class="form-label">Trigger type</label>
+        <div class="btn-group d-flex" role="group">
+          <input type="radio" class="btn-check" name="triggerType" id="triggerTypeFixedDelay" value="FIXED_DELAY"
+                 th:checked="${taskRequest.triggerType} == 'FIXED_DELAY'"
+                 onchange="onTriggerTypeChange()"/>
+          <label class="btn btn-outline-primary" for="triggerTypeFixedDelay">Fixed delay</label>
+
+          <input type="radio" class="btn-check" name="triggerType" id="triggerTypeWeekly" value="WEEKLY"
+                 th:checked="${taskRequest.triggerType} == 'WEEKLY'"
+                 onchange="onTriggerTypeChange()"/>
+          <label class="btn btn-outline-primary" for="triggerTypeWeekly">Weekly</label>
+
+          <input type="radio" class="btn-check" name="triggerType" id="triggerTypeMonthly" value="MONTHLY"
+                 th:checked="${taskRequest.triggerType} == 'MONTHLY'"
+                 onchange="onTriggerTypeChange()"/>
+          <label class="btn btn-outline-primary" for="triggerTypeMonthly">Monthly</label>
+
+          <input type="radio" class="btn-check" name="triggerType" id="triggerTypeYearly" value="YEARLY"
+                 th:checked="${taskRequest.triggerType} == 'YEARLY'"
+                 onchange="onTriggerTypeChange()"/>
+          <label class="btn btn-outline-primary" for="triggerTypeYearly">Yearly</label>
+
+          <input type="radio" class="btn-check" name="triggerType" id="triggerTypeOneOff" value="ONE_OFF"
+                 th:checked="${taskRequest.triggerType} == 'ONE_OFF'"
+                 onchange="onTriggerTypeChange()"/>
+          <label class="btn btn-outline-primary" for="triggerTypeOneOff">One off</label>
+        </div>
         <div th:replace="~{fragments/field-errors :: field-errors('triggerType', ${errors})}"></div>
       </div>
-      <div class="triggerParameter FIXED_DELAY">
-        <label for="daysBetween">Days between</label>
-        <input type="text" name="daysBetween" id="daysBetween" th:value="${taskRequest.daysBetween}" />
+
+      <div class="triggerParameter FIXED_DELAY mb-3">
+        <label for="daysBetween" class="form-label">Days between</label>
+        <input type="text" name="daysBetween" id="daysBetween" th:value="${taskRequest.daysBetween}" class="form-control"/>
         <div th:replace="~{fragments/field-errors :: field-errors('daysBetween', ${errors})}"></div>
       </div>
-      <div class="triggerParameter WEEKLY">
-        <label for="dayOfWeek">Day of Week</label>
-        <select name="dayOfWeek" id="dayOfWeek">
+
+      <div class="triggerParameter WEEKLY mb-3">
+        <label for="dayOfWeek" class="form-label">Day of week</label>
+        <select name="dayOfWeek" id="dayOfWeek" class="form-control">
           <option value="1" th:selected="${taskRequest.dayOfWeek} == 1">Monday</option>
           <option value="2" th:selected="${taskRequest.dayOfWeek} == 2">Tuesday</option>
           <option value="3" th:selected="${taskRequest.dayOfWeek} == 3">Wednesday</option>
@@ -41,9 +66,10 @@
         </select>
         <div th:replace="~{fragments/field-errors :: field-errors('dayOfWeek', ${errors})}"></div>
       </div>
-      <div class="triggerParameter YEARLY">
-        <label for="monthOfYear">Month</label>
-        <select name="monthOfYear" id="monthOfYear">
+
+      <div class="triggerParameter YEARLY mb-3">
+        <label for="monthOfYear" class="form-label">Month</label>
+        <select name="monthOfYear" id="monthOfYear" class="form-control" onchange="onMonthOfYearChange()">
           <option value="1" th:selected="${taskRequest.monthOfYear} == 1">January</option>
           <option value="2" th:selected="${taskRequest.monthOfYear} == 2">February</option>
           <option value="3" th:selected="${taskRequest.monthOfYear} == 3">March</option>
@@ -59,43 +85,53 @@
         </select>
         <div th:replace="~{fragments/field-errors :: field-errors('monthOfYear', ${errors})}"></div>
       </div>
-      <div class="triggerParameter MONTHLY YEARLY">
-        <label for="dayOfMonth">Day of month</label>
-        <input type="text" name="dayOfMonth" id="dayOfMonth" th:value="${taskRequest.dayOfMonth}" onkeyup="onDayOfMonthChange()" />
-        <div id="dayOfMonthNote" class="visually-hidden">Note: For months with less than 28 days the task will be triggered on the last day of the month</div>
+
+      <div class="triggerParameter MONTHLY YEARLY mb-3">
+        <label for="dayOfMonth" class="form-label">Day of month</label>
+        <input type="text" name="dayOfMonth" id="dayOfMonth" th:value="${taskRequest.dayOfMonth}" onkeyup="onDayOfMonthChange()" class="form-control"/>
+        <div id="dayOfMonthNote" class="visually-hidden form-text"></div>
         <div th:replace="~{fragments/field-errors :: field-errors('dayOfMonth', ${errors})}"></div>
       </div>
-      <div>
-        <label for="autocomplete-proxy">Autocomplete</label>
+
+      <div class="form-switch mb-3">
+        <label for="autocomplete-proxy" class="form-check-label">Autocomplete</label>
         <input type="checkbox"
                name="autocomplete-proxy"
                id="autocomplete-proxy"
                th:checked="${taskRequest.autocomplete}"
-               onchange="setHiddenAutocompleteInput(this)"/>
+               onchange="setHiddenAutocompleteInput(this)"
+               class="form-check-input"
+        />
         <input type="hidden" name="autocomplete" id="autocomplete" th:value="${taskRequest.autocomplete}" />
+        <div class="form-text">Note: Autocomplete tasks will be automatically marked as completed at the end of the day they became overdue</div>
         <div th:replace="~{fragments/field-errors :: field-errors('autocomplete', ${errors})}"></div>
       </div>
-      <div>
-        <label for="description">Description (supports markdown)</label>
+
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
         <div>
-          <textarea name="description" id="description" th:text="${taskRequest.description}"></textarea>
+          <textarea name="description" id="description" th:text="${taskRequest.description}" class="form-control"></textarea>
         </div>
+        <div class="form-text">Note: Supports markdown syntax</div>
         <div th:replace="~{fragments/field-errors :: field-errors('description', ${errors})}"></div>
       </div>
+
       <div th:if="${errors != null && !errors.classErrors.isEmpty()}">
         <div>Errors:</div>
         <div th:each="error : ${errors.classErrors}" th:text="${error}" class="text-danger"></div>
       </div>
 
       <script type="text/javascript">
-        function showCorrectParameters(triggerTypeElement) {
-          const triggerType = triggerTypeElement.value
-
+        function showCorrectParameters() {
           // Hide all parameter elements
           hideElementsWithClass("triggerParameter")
 
           // Show the relevant ones
-          unhideElementsWithClass(triggerType)
+          unhideElementsWithClass(getSelectedTriggerType())
+        }
+
+        function getSelectedTriggerType() {
+          return document.querySelector('input[name="triggerType"]:checked')?.value;
         }
 
         function hideElementsWithClass(className) {
@@ -118,26 +154,37 @@
 
         function showOrHideDayOfMonthNote() {
           const noteElement = document.getElementById("dayOfMonthNote")
-          const triggerTypeElement = document.getElementById("triggerType")
           const dayOfMonthElement = document.getElementById("dayOfMonth")
+          const monthOfYearElement = document.getElementById("monthOfYear")
 
-          const isMonthlyTriggerType = triggerTypeElement.value === "MONTHLY"
-          const isMoreThan28thDayOfMonth = dayOfMonthElement.value > 28
+          const selectedTriggerType = getSelectedTriggerType();
+
+          const isMonthlyTriggerType = selectedTriggerType === "MONTHLY"
+          const isYearlyTriggerType = selectedTriggerType === "YEARLY"
+          const isMoreThan28thDayOfMonth = dayOfMonthElement.value > 28 && dayOfMonthElement.value < 32
+          const isLeapDay = monthOfYearElement.value == 2 && dayOfMonthElement.value == 29
 
           if (isMonthlyTriggerType && isMoreThan28thDayOfMonth) {
             noteElement.classList.remove("visually-hidden")
             noteElement.innerText = `Note: For months with less than ${dayOfMonthElement.value} days the task will be triggered on the last day of the month`
+          } else if (isYearlyTriggerType && isLeapDay) {
+            noteElement.classList.remove("visually-hidden")
+            noteElement.innerText = `Note: On non leap years the task will be triggered on the 28th of February`
           } else {
             noteElement.classList.add("visually-hidden")
           }
         }
 
-        function onTriggerTypeChange(triggerTypeElement) {
-          showCorrectParameters(triggerTypeElement)
+        function onTriggerTypeChange() {
+          showCorrectParameters()
           showOrHideDayOfMonthNote()
         }
 
         function onDayOfMonthChange() {
+          showOrHideDayOfMonthNote()
+        }
+
+        function onMonthOfYearChange() {
           showOrHideDayOfMonthNote()
         }
 
