--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="~{layout :: layout(
-    title = ${task.name},
+    title = 'Task details',
     content = ~{::section}
 )}" xmlns:th="http://www.thymeleaf.org">
     <body>
