Don't try to render markdown if we don't have any

--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -65,7 +65,9 @@
                     }
 
                     const markdownSource = document.getElementById("hidden-description").innerHTML
-                    document.getElementById("markdown-description").innerHTML = marked.parse(markdownSource)
+                    if (markdownSource) {
+                        document.getElementById("markdown-description").innerHTML = marked.parse(markdownSource)
+                    }
                 </script>
             </div>
         </section>
