--- a/src/main/resources/views/task-details.html
+++ b/src/main/resources/views/task-details.html
@@ -51,22 +51,15 @@
 
                     <div class="list-group-item">
                         <div class="text-secondary">Description</div>
-                        <div id="hidden-description" th:text="${task.description}" class="visually-hidden"></div>
-                        <div th:if="${task.description != null && !task.description.isBlank()}" id="markdown-description"></div>
+                        <div th:if="${task.description != null && !task.description.isBlank()}" th:utext="${task.descriptionAsHtml()}"></div>
                         <div th:if="${task.description == null || task.description.isBlank()}">None</div>
                     </div>
 
                 </div>
 
-                <script src="https://cdn.jsdelivr.net/npm/marked@11.0.0/lib/marked.umd.min.js"></script>
                 <script type="text/javascript">
                     function showDeletePrompt() {
                         document.getElementById("delete-prompt").classList.remove("visually-hidden")
-                    }
-
-                    const markdownSource = document.getElementById("hidden-description").innerHTML
-                    if (markdownSource) {
-                        document.getElementById("markdown-description").innerHTML = marked.parse(markdownSource)
                     }
                 </script>
             </div>
