--- a/src/main/resources/views/fragments/task-fields.html
+++ b/src/main/resources/views/fragments/task-fields.html
@@ -11,7 +11,7 @@
 
       <div class="mb-3">
         <label for="dueDate" class="form-label">Due date</label>
-        <input type="text" name="dueDate" id="dueDate" th:value="${taskRequest.dueDate}" class="form-control"/>
+        <input type="text" inputmode="numerical" name="dueDate" id="dueDate" th:value="${taskRequest.dueDate}" class="form-control"/>
         <div class="form-text">Note: Requires YYYY-MM-DD format, e.g 2023-12-25</div>
         <div th:replace="~{fragments/field-errors :: field-errors('dueDate', ${errors})}"></div>
       </div>
@@ -49,7 +49,7 @@
 
       <div class="triggerParameter FIXED_DELAY mb-3">
         <label for="daysBetween" class="form-label">Days between</label>
-        <input type="text" name="daysBetween" id="daysBetween" th:value="${taskRequest.daysBetween}" class="form-control"/>
+        <input type="text" inputmode="numerical" name="daysBetween" id="daysBetween" th:value="${taskRequest.daysBetween}" class="form-control"/>
         <div th:replace="~{fragments/field-errors :: field-errors('daysBetween', ${errors})}"></div>
       </div>
 
@@ -88,7 +88,7 @@
 
       <div class="triggerParameter MONTHLY YEARLY mb-3">
         <label for="dayOfMonth" class="form-label">Day of month</label>
-        <input type="text" name="dayOfMonth" id="dayOfMonth" th:value="${taskRequest.dayOfMonth}" onkeyup="onDayOfMonthChange()" class="form-control"/>
+        <input type="text" inputmode="numerical" name="dayOfMonth" id="dayOfMonth" th:value="${taskRequest.dayOfMonth}" onkeyup="onDayOfMonthChange()" class="form-control"/>
         <div id="dayOfMonthNote" class="visually-hidden form-text"></div>
         <div th:replace="~{fragments/field-errors :: field-errors('dayOfMonth', ${errors})}"></div>
       </div>
