--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -2,6 +2,7 @@
 <html th:fragment="layout" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
         <title th:text="|${title} - Chores|"></title>
         <link th:href="@{/global.css}" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
