--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -30,9 +30,9 @@
         <div class="container">
             <header class="d-flex justify-content-center py-3">
                 <ul class="nav nav-pills">
-                    <li th:replace="~{fragments/nav-item :: nav-item('/', 'Home', ${title})}"></li>
-                    <li th:replace="~{fragments/nav-item :: nav-item('/tasks/add', 'Add task', ${title})}"></li>
-                    <li th:replace="~{fragments/nav-item :: nav-item('/tasks', 'All tasks', ${title})}"></li>
+                    <li th:replace="~{fragments/nav-item :: nav-item(@{/}, 'Home', ${title})}"></li>
+                    <li th:replace="~{fragments/nav-item :: nav-item(@{/tasks/add}, 'Add task', ${title})}"></li>
+                    <li th:replace="~{fragments/nav-item :: nav-item(@{/tasks}, 'All tasks', ${title})}"></li>
                 </ul>
             </header>
         </div>
